--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -46,3 +46,6 @@ ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
 
+[/Script/GameplayDebugger.GameplayDebuggerConfig]
+ActivationKey=Subtract
+
