Enemy hit neutral

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -49,3 +49,6 @@ ManualIPAddress=
 [/Script/GameplayDebugger.GameplayDebuggerConfig]
 ActivationKey=Subtract
 
+[/Script/AIModule.AISense_Sight]
+bAutoRegisterAllPawnsAsSources=false
+
