--- a/Config/DefaultEditorPerProjectUserSettings.ini
+++ b/Config/DefaultEditorPerProjectUserSettings.ini
@@ -1,2 +1,5 @@
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/TopDown
+
+[/Script/UnrealEd.LevelEditorViewportSettings]
+bEnableViewportCameraToUpdateFromPIV=False
