Fix UI build bug

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,5 +1,5 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/TopDown/Maps/TopDownMap.TopDownMap
+GameDefaultMap=/Game/TopDown/Maps/MainMenu.MainMenu
 EditorStartupMap=/Game/TopDown/Maps/TopDownMap.TopDownMap
 GlobalDefaultGameMode=/Game/TopDown/Blueprints/TagGameGameMode_BP.TagGameGameMode_BP_C
 
